# track-almost-anything

./: .gitignore  LICENSE  README.md  pyproject.toml
research/detection/: mp_hands_detect_realtime.py  mp_pose_detect_realtime.py  yolo_object_detect.ipynb  yolo_object_detect_realtime.py
src/track_almost_anything/: __init__.py  _logging.py  cli.py  config.json  track_almost_anything.py
src/track_almost_anything/api/io/: __init__.py  image_io.py
src/track_almost_anything/api/processing/config/: torch_backends.py
src/track_almost_anything/api/processing/detection/: __init__.py  detection.py  mp_hands_detection.py  mp_pose_detection.py  mp_utils.py  yolo_detection.py  yolo_utils.py
src/track_almost_anything/api/processing/utils/: __init__.py  detection_models.py
src/track_almost_anything/controller/: __init__.py  controller.py  detection_controller.py  detection_controller_2.py  live_view_controller.py  roi_controller.py  source_controller.py  table_view_controller.py  utils.py
src/track_almost_anything/model/: __init__.py  detection_model.py  model.py  roi_model.py  source_model.py
src/track_almost_anything/model/workers/: __init__.py  abstract_detection_thread.py  live_view_thread.py  mediapipe_hands_thread.py  mediapipe_pose_thread.py  mediapipe_thread.py  yolo_thread.py
src/track_almost_anything/view/: aspect_ratio_label_widget.py  main_window.ui  main_window_2.ui  main_window_3.ui  main_window_4.ui  main_window_4_with_ss.ui  message_boxes.py  ui_main_window.py  view.py
